<resources>
    <string name="app_name">Mortgage VIP</string>

    <string name="rate">Rate</string>
    <string name="chatHere">See your mortagage rates here</string>
    <string name="chat">Mortgage Calculator</string>
    <string name="msortgagecalculator">See mortgage calculator here</string>
    <string name="constructioncalculator">Commerical Calculator</string>
    <string name="see">See  commerical calculator here</string>
    <string name="morsee">See  Mortgage Companies on map</string>
    <string name="homeValue">Home Value</string>
    <string name="downPayment">Down Payment</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="interstrate">Interest Rate</string>
    <string name="loanTerms">Loan Terms</string>
    <string name="tax">Property Tax/year</string>
    <string name="pmi">PMI</string>
    <string name="income">Home Ins/year</string>
    <string name="monthly">Monthly HOA</string>
    <string name="calculate">Calculate</string>
    <string name="monthlyTotal">Monthly Payment</string>
    <string name="notReq">Not Required</string>
    <string name="downPaymentAmount">Down Payment Amount</string>
    <string name="downPaymentPer">Down Payment %</string>
    <string name="payOff">Loan Pay-off Date</string>
    <string name="tIntersetPaid">Total Interest Paid</string>
    <string name="mTaxPaid">Monthly Tax Paid</string>
    <string name="tTaxPaid">Total Tax Paid</string>
    <string name="monthlyHomeIns">Monthly Home Insurance</string>
    <string name="tHomeIns">Total Home Insurance</string>
    <string name="anualPaymentAmount">Annual Payment Amount</string>
    <string name="totalofyear">Total Of 360 Payments</string>
    <string name="monthlyHoA">Total HOA fees</string>
    <string name="loanTermss">Loan Terms in Years</string>
    <string name="totalMonthlyPayment">Total Monthly Mortgage Payment</string>
    <string name="viewRate">View Rates</string>
    <string name="seetip">See mortgage calculator tips here</string>
    <string name="slogan_text">Welcome to Mortgage VIP</string>
    <string-array name="examples">
        <item>Welcome to Mortgage VIP</item>
        <item>where getting the tools for your next home are at your fingertips</item>
    </string-array>

    <string name="about_textHeadind3">Thick It. Play It. Feel It.</string>
    <string name="about_textHeadind4">Have the perfect music for whatever you are doing . We are in awe of the power of music.Our curators do not want anything to ever interrupt it. that why they are here to help you pick to right one.Choose your flow-Over 30 Genres Love or hate a song,it will help us recommend the right ones for you.we are the first Naija streaming services that understands you.</string>


    <string name="title_activity_agri_cool_dashborad">Lottery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="extras">Extra</string>
    <string name="action_settings">Setting</string>
    <string name="email">Email</string>


    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailAndMobilee">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="sureName">Surename</string>
    <string name="phone">Mobile</string>
    <string name="loginNow">Login now!</string>
    <string name="namehint">Name</string>
    <string name="confirmPassword">Repeat Password</string>
    <string name="forgot_password">Forgot Password ?    </string>
    <string name="register_now">Register now!</string>
    <string name="submit">Submit</string>
    <string name="password_reset_text">We just need your registered Email Id to send your password reset instructions.</string>
    <string name="mortgagecomp">Mortgage Companies</string>
    <string name="seeVip">See more Details</string>

    <array name="months">
        <item>Select Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>


    <array name="rafi">
        <item>Refi Or Buy</item>
        <item>Refi</item>
        <item>Buy</item>

    </array>

    <array name="loantype">
        <item>Loan Type</item>
        <item>Conventional</item>
        <item>FHA</item>
        <item>VA</item>
        <item>USDA</item>

    </array>

    <array name="rate">
        <item>Rate</item>
        <item>"9%"</item>
        <item>"10%"</item>
        <item>"11%"</item>
        <item>"12%"</item>
        <item>"13%"</item>
        <item>"14%"</item>

    </array>


    <array name="points">
        <item>Points</item>
        <item>1 points</item>
        <item>2 points</item>
        <item>3 points</item>
        <item>4 points</item>


    </array>


    <array name="rating">
        <item>Credit Rating</item>
        <item>Excellent(720+)</item>
        <item>Good(620-719)</item>
        <item>Fair(580-619)</item>
        <item>Poor</item>

    </array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="see_more">See More</string>
    <string name="sheets">Sheets</string>
</resources>
