<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mortgage_Rate.MortgageSummaryActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/colorPrimary" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nunito_semibold"

                android:layout_centerHorizontal="true"
                android:text="Mortgage Repayment Summary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                />

            <View
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/view"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginStart="@dimen/margin_normal"
                android:weightSum="2">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$1456.97"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/totalMonthlyPayment"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthlyTotal"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="PMI"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/pmi"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notReq"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>




            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_normal"
                android:weightSum="2">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$60,000.00"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/downPayment"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downPaymentAmount"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="20.00%"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/downPaymentPercentage"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downPaymentPer"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_normal"
                android:weightSum="2">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Jul, 2030"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/endDate"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payOff"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="******"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/monthlyHOA"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthlyHoA"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_normal"
                android:weightSum="2">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$200.00"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/monthlyTaxPaid"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mTaxPaid"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$72,000.00"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/annualPaymentAmount"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anualPaymentAmount"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_normal"
                android:weightSum="2">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$83.97"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/monthlyHomeInsurance"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthlyHomeIns"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$30,000.00"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/finalPayment"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tHomeIns"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="14sp"
                        android:id="@+id/month"
                        android:fontFamily="@font/nunito_semibold"

                        android:textColor="@color/black"
                        />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_normal"

                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="$83.97"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:id="@+id/totalMonthlyMortgage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalMonthlyPayment"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_semibold"
                    android:layout_marginBottom="@dimen/margin_normal"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>